# eigenlayer-bls-template

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  foundry.toml  remappings.txt  rust-toolchain.toml  settings.env
.github/: dependabot.yml
.github/workflows/: ci.yml.liquid  verify-template.yml
contracts/src/: HelloServiceManager.sol  HelloTaskManager.sol  IHelloTaskManager.sol  ITangleTaskManager.sol  TangleServiceManager.sol  TangleTaskManager.sol
hooks/: pre.rhai
src/: error.rs  lib.rs  main.rs
src/contexts/: aggregator.rs  client.rs  combined.rs  eigen_task.rs  example_context.rs  mod.rs
src/jobs/: example_task.rs  initialize_task.rs  mod.rs
